@@ -3,6 +3,7 @@ package com.example.HonBam.filter;
 import com.example.HonBam.auth.TokenProvider;
 import com.example.HonBam.auth.TokenUserInfo;
 import io.jsonwebtoken.JwtException;
+import io.netty.util.internal.StringUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -21,6 +22,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 @Slf4j
@@ -29,26 +31,10 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final TokenProvider tokenProvider;
 
-    // 공개/예외 경로는 필터 스킵 (SecurityConfig와 일치하도록 유지)
-    private static final String[] SKIP_PATTERNS = {
-            "/",
-            "/error",
-            "/api/recipe/**",
-            "/api/freeboard/**",
-            "/api/posts/**",
-            "/ws-chat/**", "/chat/**", "/redis/**", "/chatRooms/**", "/topic/**", "/app/**"
-    };
-    private static final AntPathMatcher PATH_MATCHER = new AntPathMatcher();
-
     @Override
-    protected boolean shouldNotFilter(HttpServletRequest request) throws ServletException {
-        String path = request.getRequestURI();
-        // OPTIONS 프리플라이트는 항상 스킵
-        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) return true;
-        for (String pattern : SKIP_PATTERNS) {
-            if (PATH_MATCHER.match(pattern, path)) return true;
-        }
-        return false;
+    protected boolean shouldNotFilter(HttpServletRequest request)  {
+        // OPTIONS는 항상 skip
+        return "OPTIONS".equalsIgnoreCase(request.getMethod());
     }
 
     @Override
@@ -64,55 +50,56 @@ public class JwtAuthFilter extends OncePerRequestFilter {
             return;
         }
 
-        // 1) 쿠키 access_token → 2) Authorization: Bearer
-        String token = extractCookie(request, "access_token");
-        if (!StringUtils.hasText(token)) {
-            token = extractBearer(request);
-        }
+        String token = resolveToken(request);
 
-        // 토큰 없으면 패스(컨트롤러에서 인증 필요 시 401)
+        // 토큰이 없는 경우 인증 없이 pass, SecurityConfig에서 차단됨
         if (!StringUtils.hasText(token)) {
             filterChain.doFilter(request, response);
             return;
         }
 
         try {
-            // access 전용 검증(+서명/만료)
             TokenUserInfo info = tokenProvider.validateAndGetTokenUserInfo(token);
 
-            var authentication = new UsernamePasswordAuthenticationToken(
-                    info, // Principal = TokenUserInfo
-                    null,
-                    Collections.singletonList(
-                            new SimpleGrantedAuthority("ROLE_" + info.getRole().name())
-                    )
+            UsernamePasswordAuthenticationToken authentication =
+                    new UsernamePasswordAuthenticationToken(
+                            info,
+                            null,
+                            List.of(new SimpleGrantedAuthority("ROLE_" + info.getRole().name()))
+                    );
+
+            authentication.setDetails(
+                    new WebAuthenticationDetailsSource().buildDetails(request)
             );
-            authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+
             SecurityContextHolder.getContext().setAuthentication(authentication);
 
-        } catch (JwtException | IllegalArgumentException e) {
-            log.warn("JWT 검증 실패: {}", e.getMessage());
-        } catch (Exception e) {
-            log.warn("JWT 필터 처리 중 예외: {}", e.getMessage());
+        } catch (JwtException exception) {
+            throw exception;
         }
 
         filterChain.doFilter(request, response);
     }
 
-    private String extractCookie(HttpServletRequest request, String name) {
-        Cookie[] cookies = request.getCookies();
-        if (cookies == null) return null;
-        for (Cookie c : cookies) {
-            if (name.equals(c.getName())) return c.getValue();
-        }
-        return null;
-    }
+    private String resolveToken(HttpServletRequest request) {
 
-    private String extractBearer(HttpServletRequest request) {
+        // Authorization 헤더 우선
         String bearer = request.getHeader("Authorization");
         if (StringUtils.hasText(bearer) && bearer.startsWith("Bearer ")) {
             return bearer.substring(7);
         }
+
+        // fallback: Cookie 방식
+        Cookie[] cookies = request.getCookies();
+        if (cookies == null) return null;
+
+        for (Cookie c : cookies) {
+            if ("access_token".equals(c.getName())) {
+                return c.getValue();
+            }
+        }
+
         return null;
     }
+
 }
